--- a/lerping/index.html
+++ b/lerping/index.html
@@ -38,8 +38,8 @@
 <script src="../libs/orbitControls.js"></script>
 <div id="container">
     <ul class="list">
-        <li class="list__item">Use your touchpad/mouse to rotate the scene and paint polygons</li>
-        <li class="list__item">Watch the animation of changing geometric shapes</li>
+        <li class="list__item">Use your touchpad/mouse to rotate the scene and to color polygons</li>
+        <li class="list__item">Watch the animation of geometric shape changing</li>
     </ul>
     <canvas id="canvas"></canvas>
 </div>
