Add back buttons to each project & update project structure

--- a/drinking-bird/index.html
+++ b/drinking-bird/index.html
@@ -1,21 +1,17 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Drinking bird</title>
-    <style>
-        body {
-            margin: 0;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%
-        }
-    </style>
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/default.css" />
+    <link rel="stylesheet" href="../assets/css/button.css" />
 </head>
 <body>
 <script src="../libs/three.js"></script>
 <script src="../libs/orbitControls.js"></script>
 <div id="container">
+    <a href="/" class="link link--back">Check others</a>
     <canvas id="canvas"></canvas>
 </div>
 <script>
