--- a/index.html
+++ b/index.html
@@ -1,42 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Three.js Examples</title>
+    <link rel="stylesheet" href="assets/css/reset.css">
+    <link rel="stylesheet" href="assets/css/default.css">
+    <link rel="stylesheet" href="assets/css/button.css">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-
-            border: 0;
-
-            font-size: 100%;
-        }
-
-        html,
-        body {
-            height: 100%;
-
-            line-height: 1.25;
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-            font-weight: 400;
-        }
-
-        input:focus,
-        textarea:focus,
-        a:focus {
-            outline: none;
-            box-shadow: 0 0 0;
-        }
-
-        a {
-            color: #000;
-            text-decoration: none;
-        }
-
-        button {
-            border: none;
-            background-color: #FFF;
-        }
-
         body {
             background-color: rgba(77, 77, 77, 0.70);
         }
