--- a/earth-and-sun/index.html
+++ b/earth-and-sun/index.html
@@ -1,20 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Earth and sun</title>
-    <style>
-        body {
-            margin: 0;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%
-        }
-    </style>
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/default.css" />
+    <link rel="stylesheet" href="../assets/css/button.css" />
 </head>
 <body>
 <script src="../libs/three.js"></script>
 <div id="container">
+    <a href="/" class="link link--back">Check others</a>
     <canvas id="canvas"></canvas>
 </div>
 <script>
