--- a/geometric-shapes/index.html
+++ b/geometric-shapes/index.html
@@ -1,21 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
     <title>Geometric shapes</title>
+    <link rel="stylesheet" href="../assets/css/reset.css" />
+    <link rel="stylesheet" href="../assets/css/default.css" />
+    <link rel="stylesheet" href="../assets/css/button.css" />
+
     <style>
-        body {
-            overflow: hidden;
-
-            height: 100%;
-            margin: 0;
-
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-        }
-
-        canvas {
-            width: 100%;
-            height: 100%
-        }
-
         .list {
             position: absolute;
             top: 30px;
@@ -42,6 +34,7 @@
         <li class="list__item">Use your touchpad/mouse to rotate the scene and to color polygons</li>
         <li class="list__item">Watch the animation of geometric shape changing</li>
     </ul>
+    <a href="/" class="link link--back">Check others</a>
     <canvas id="canvas"></canvas>
 </div>
 <script>
