--- a/index.html
+++ b/index.html
@@ -21,38 +21,15 @@
             padding: 20px 20px;
 
             transform: translateX(-125px) translateY(-50%);
-
-            text-align: center;
-        }
-
-        .link {
-            display: block;
-
-            padding: 8px 25px;
-            margin-top: 20px;
-
-            border: 4px solid #33AC9F;
-            background-color: rgba(155, 155, 155, 0.11);
-
-            color: #DEDEDE;
-            letter-spacing: 2px;
-
-            transition: background-color 0.5s ease,
-            color 0.5s ease;
-        }
-
-        .link:hover {
-            background-color: #33AC9F;
-            color: #F5F5F5;
         }
     </style>
 </head>
 
 <body>
-<div class="container" role="main">
-    <a class="link" href="drinking-bird" role="link">Drinking Bird</a>
-    <a class="link" href="earth-and-sun" role="link">Earth and Sun</a>
-    <a class="link" href="geometric-shapes" role="link">Geometric shapes</a>
-</div>
+<main class="container" role="main">
+    <a href="drinking-bird" class="link">Drinking Bird</a>
+    <a href="earth-and-sun" class="link">Earth and Sun</a>
+    <a href="geometric-shapes" class="link">Geometric shapes</a>
+</main>
 </body>
 </html>
