Update buttons styles

--- a/drinking-bird/index.html
+++ b/drinking-bird/index.html
@@ -11,7 +11,9 @@
 <script src="../libs/three.js"></script>
 <script src="../libs/orbitControls.js"></script>
 <main id="container">
-    <a href="/" class="link link--back">Check others</a>
+    <a href="/" class="button button--rounded">
+        <span class="button__text">Check others</span>
+    </a>
     <canvas id="canvas"></canvas>
 </main>
 <script>
