--- a/earth-and-sun/index.html
+++ b/earth-and-sun/index.html
@@ -10,7 +10,9 @@
 <body>
 <script src="../libs/three.js"></script>
 <main id="container">
-    <a href="/" class="link link--back">Check others</a>
+    <a href="/" class="button button--rounded">
+        <span class="button__text">Check others</span>
+    </a>
     <canvas id="canvas"></canvas>
 </main>
 <script>
