--- a/geometric-shapes/index.html
+++ b/geometric-shapes/index.html
@@ -34,7 +34,9 @@
         <li class="list__item">Use your touchpad/mouse to rotate the scene and to color polygons</li>
         <li class="list__item">Watch the animation of geometric shape changing</li>
     </ul>
-    <a href="/" class="link link--back">Check others</a>
+    <a href="/" class="button button--rounded">
+        <span class="button__text">Check others</span>
+    </a>
     <canvas id="canvas"></canvas>
 </main>
 <script>
