--- a/index.html
+++ b/index.html
@@ -6,30 +6,25 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/default.css">
     <link rel="stylesheet" href="assets/css/button.css">
-    <style>
-        body {
-            background-color: rgba(77, 77, 77, 0.70);
-        }
-
-        .container {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-
-            width: 250px;
-
-            padding: 20px 20px;
-
-            transform: translateX(-125px) translateY(-50%);
-        }
-    </style>
 </head>
 
 <body>
 <main class="container" role="main">
-    <a href="drinking-bird" class="link">Drinking Bird</a>
-    <a href="earth-and-sun" class="link">Earth and Sun</a>
-    <a href="geometric-shapes" class="link">Geometric shapes</a>
+    <div class="container__button">
+        <a href="drinking-bird" class="button button--rounded">
+            <span class="button__text">Drinking Bird</span>
+        </a>
+    </div>
+    <div class="container__button">
+        <a href="earth-and-sun" class="button button--rounded">
+            <span class="button__text">Earth and Sun</span>
+        </a>
+    </div>
+    <div class="container__button">
+        <a href="geometric-shapes" class="button button--rounded">
+            <span class="button__text">Geometric shapes</span>
+        </a>
+    </div>
 </main>
 </body>
 </html>
