Add light, update camera position, update size of cube, update color schema

--- a/loader/index.html
+++ b/loader/index.html
@@ -22,11 +22,12 @@
   'use strict';
 
   function ThreejsScene() {
-    this.shapeX = 10;
-    this.shapeY = 10;
-    this.shapeZ = 10;
-    this.shapeColor = 0x00ff00;
+    this.shapeX = 5;
+    this.shapeY = 5;
+    this.shapeZ = 5;
+    this.shapeColor = 0xF4EBEB;
   }
+
 
   ThreejsScene.prototype.init = function () {
     this.scene = new THREE.Scene();
@@ -40,37 +41,47 @@
     this.render();
   };
 
+
   ThreejsScene.prototype.initCamera = function () {
     var self = this;
 
-    self.camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000);
-    self.camera.position.x = 0;
-    self.camera.position.y = 0;
+    self.camera = new THREE.PerspectiveCamera(65, window.innerWidth / window.innerHeight, 1, 1000);
+    self.camera.position.x = 15;
+    self.camera.position.y = 10;
     self.camera.position.z = 35;
+    self.camera.updateProjectionMatrix();
+    self.camera.lookAt(self.scene.position);
   };
+
 
   ThreejsScene.prototype.initLight = function () {
     var self = this;
+    var light;
 
-    var light = new THREE.AmbientLight(0x606060);
-    self.scene.add(light);
+    light = new THREE.DirectionalLight(0xffffff, 1.5);
+    light.position.set(30, 50, 20);
+    light.castShadow = true;
+//    var light = new THREE.AmbientLight(0x606060);
+//    self.scene.add(light);
 
-    light = new THREE.PointLight(0xffffff, 1, 700);
-    light.position.set(0, 20, 120);
+//    var light = new THREE.PointLight(0xffffff, 1, 700);
+//    light.position.set(0, 20, 120);
     self.scene.add(light);
   };
+
 
   ThreejsScene.prototype.initRenderer = function () {
     var self = this;
 
     self.renderer = new THREE.WebGLRenderer();
-    self.renderer.setClearColor(0x000000, 1.0);
+    self.renderer.setClearColor(0xD3A6A6, 1.0);
     self.renderer.setPixelRatio(window.devicePixelRatio);
     self.renderer.setSize(window.innerWidth, window.innerHeight);
     self.renderer.shadowMap.enabled = true;
 
     self.addToDOM();
   };
+
 
   ThreejsScene.prototype.addToDOM = function () {
     var container = document.getElementById('container');
@@ -82,27 +93,34 @@
     container.appendChild(this.renderer.domElement);
   };
 
+
   ThreejsScene.prototype.initShapes = function () {
     var self = this;
+    var geometry, material;
 
-    var geometry = new THREE.BoxGeometry(self.shapeX, self.shapeY, self.shapeZ);
-    var material = new THREE.MeshBasicMaterial({
+
+    geometry = new THREE.BoxGeometry(self.shapeX, self.shapeY, self.shapeZ);
+    material = new THREE.MeshLambertMaterial({
       color: self.shapeColor
     });
 
-    self.shape = new THREE.Mesh(geometry, material);
+    self.shapeOne = new THREE.Mesh(geometry, material);
+    self.shapeOne.receiveShadow = false;
 
-    self.scene.add(self.shape);
-
-    self.tl = new TimelineMax({repeat: -1 ,repeatDelay:0.5});
-    self.tl.to(self.shape.rotation, 2.7, {y:-Math.PI, ease: Expo.easeOut},"=-0.7");
+    self.scene.add(self.shapeOne);
+    self.tl = new TimelineMax({repeat: -1, repeatDelay: 0.5});
+    self.tl.to(self.shapeOne.scale, 0.5, {x: 2, ease: Elastic.easeOut});
+    self.tl.to(self.shapeOne.scale, 0.7, {z: 1, x: 1, y: 1, ease: Expo.easeOut});
+    self.tl.to(self.shapeOne.rotation, 1.7, {y: -Math.PI, ease: Expo.easeOut}, "=-0.7");
   };
+
 
   ThreejsScene.prototype.setEventListeners = function () {
     var self = this;
 
     window.addEventListener('resize', self.onWindowResize, false);
   };
+
 
   ThreejsScene.prototype.onWindowResize = function () {
     var self = this;
@@ -111,6 +129,7 @@
     self.camera.updateProjectionMatrix();
     self.renderer.setSize(window.innerWidth, window.innerHeight);
   };
+
 
   ThreejsScene.prototype.render = function () {
     requestAnimationFrame(this.render.bind(this));
