--- a/loader/index.html
+++ b/loader/index.html
@@ -98,7 +98,6 @@
     var self = this;
     var geometry, material;
 
-
     geometry = new THREE.BoxGeometry(self.shapeX, self.shapeY, self.shapeZ);
     material = new THREE.MeshLambertMaterial({
       color: self.shapeColor
@@ -108,10 +107,28 @@
     self.shapeOne.receiveShadow = false;
 
     self.scene.add(self.shapeOne);
-    self.tl = new TimelineMax({repeat: -1, repeatDelay: 0.5});
-    self.tl.to(self.shapeOne.scale, 0.5, {x: 2, ease: Elastic.easeOut});
-    self.tl.to(self.shapeOne.scale, 0.7, {z: 1, x: 1, y: 1, ease: Expo.easeOut});
-    self.tl.to(self.shapeOne.rotation, 1.7, {y: -Math.PI, ease: Expo.easeOut}, "=-0.7");
+
+    self.shapeOne.position.x = 1;
+    self.tl = new TimelineMax({repeat: -1, repeatDelay: 1.5});
+    self.tl.to(self.shapeOne.position, 0.7, {x: 18, ease: Expo.easeOut});
+    self.tl.to(self.shapeOne.rotation, 0.7, {y: -Math.PI, ease: Expo.easeOut}, "=-0.6");
+    self.tl.to(self.shapeOne.position, 0.7, {x: 1, ease: Expo.easeIn});
+
+
+    geometry = new THREE.BoxGeometry(self.shapeX, self.shapeY, self.shapeZ);
+    material = new THREE.MeshLambertMaterial({
+      color: self.shapeColor
+    });
+
+    self.shapeTwo = new THREE.Mesh(geometry, material);
+    self.shapeTwo.receiveShadow = false;
+
+    self.shapeTwo.position.x = -1;
+    self.scene.add(self.shapeTwo);
+    self.tl = new TimelineMax({repeat: -1, repeatDelay: 1.5, delay: 1.5});
+    self.tl.to(self.shapeTwo.position, 0.7, {x: -17, ease: Expo.easeOut});
+    self.tl.to(self.shapeTwo.rotation, 0.7, {y: Math.PI, ease: Expo.easeOut}, "=-0.6");
+    self.tl.to(self.shapeTwo.position, 0.7, {x: -1, ease: Expo.easeIn});
   };
 
 
