Update index.html (add button for Loader)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 <body>
 <main class="container" role="main">
     <div class="container__button">
+        <a href="loader" class="button button--rounded">
+            <span class="button__text">Loader</span>
+        </a>
+    </div>
+    <div class="container__button">
+        <a href="geometric-shapes" class="button button--rounded">
+            <span class="button__text">Geometric shapes</span>
+        </a>
+    </div>
+    <div class="container__button">
         <a href="drinking-bird" class="button button--rounded">
             <span class="button__text">Drinking Bird</span>
         </a>
@@ -18,11 +28,6 @@
     <div class="container__button">
         <a href="earth-and-sun" class="button button--rounded">
             <span class="button__text">Earth and Sun</span>
-        </a>
-    </div>
-    <div class="container__button">
-        <a href="geometric-shapes" class="button button--rounded">
-            <span class="button__text">Geometric shapes</span>
         </a>
     </div>
 </main>
